# bookstore

./: .dockerignore  .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  env.dev  manage.py  pyproject.toml  pytest.ini
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
exercicio_rest/: asgi.py  settings.py  urls.py  wsgi.py
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewset/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py  factories.py  urls.py
product/migrations/: 0001_initial.py  0002_alter_product_categories.py  0003_alter_product_categories.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/: __init__.py
product/tests/test_serializers/: test_category_serializers.py  test_product_serializers.py
product/tests/test_viewset/: test_category_viewset.py  test_product_viewset.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
