[tool.poetry]
name = "exercicio-django-rest"
version = "0.1.0"
description = "exercicio"
authors = ["mauricio8989 <mauriciosouza8989@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.2"
djangorestframework = "^3.15.2"
django = "^5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
