[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["mauricio8989 <mauriciosouza8989@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"
django-rest-framework = "^0.1.0"
factory-boy = "^3.3.1"
pytest = "^8.3.2"
pytest-django = "^4.9.0"
djangorestframework = "^3.15.2"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.4.6"
whitenoise = "^6.7.0"
gunicorn = "^23.0.0"
gitpython = "^3.1.43"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
factory-boy = "^3.3.1"
coverage = "^7.6.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"